--- a/setting.html
+++ b/setting.html
@@ -57,6 +57,11 @@
             color: var(--text-color);
         }
 
+        h3 {
+            margin: var(--padding);
+            color: var(--text-color);
+        }
+
         header,
         footer {
             padding: var(--padding);
@@ -98,14 +103,8 @@
     <header>
         <p>Dies ist eine Alpha Version, die Editierbaren Einstellungen kommen mit der v.0.8</p>
     </header>
+    <h3>Anleitung</h3>
     <main>
-        <details class="content-header">
-            <summary>Ersteller</summary>
-            <div class="content-main">
-
-            </div>
-        </details>
-        <hr>
         <details class="content-header">
             <summary>Bilder Ändern</summary>
             <div class="content-main">
@@ -127,12 +126,22 @@
         <details class="content-header">
             <summary>Design</summary>
             <div class="content-main">
-                
+                <p>Das Design wird in der styles.css Datei definiert. <br>In der :root scheife kann man Farben, Rundungen, abstände, etc. ändern.</p>
+                <p>Darkmode: <br>Den Darkmode ändert man in der zweiten schleife [data-theme="dark"]</p>
             </div>
         </details>
         <hr>
         <details class="content-header">
-            <summary>Overview</summary>
+            <summary>Start App</summary>
+            <div class="content-main">
+                <p>Die App die sich beim starten öffnet, wird zuzeit in der Funktion definiert und muss in der workapce</p>
+            </div>
+        </details>
+    </main>
+    <h3>Roadmap</h3>
+    <main>
+        <details class="content-header">
+            <summary>2025 Q1</summary>
             <div class="content-main">
                 
             </div>
