--- a/webdesk.html
+++ b/webdesk.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="img/small-logo.png">
-    <title>webDesk (Alpha)</title>
+    <title>WebDesk (Alpha)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -156,7 +156,7 @@
         panels: [
         {
             buttonText: "Einstellung",
-            content: "Einstellung",
+            content: "Das sind die Einstellugnen",
             link: "setting.html",
             onClick: "iframeWindow",
         },
