--- a/webdesk.html
+++ b/webdesk.html
@@ -33,7 +33,7 @@
                     <button>Home</button>
                 </li>
                 <li>
-                    <button>Workspace</button>
+                    <button>Desktop</button>
                 </li>
             </ul>
         </div>
