--- a/webdesk.html
+++ b/webdesk.html
@@ -152,14 +152,24 @@
 
     const data = [
     {
-        group: "Demo Gruppe",
+        group: "Beispiel Gruppe",
         panels: [
         {
-            buttonText: "Einstellung",
+            buttonText: "Button (Einstellung)",
             content: "Das sind die Einstellugnen",
             link: "setting.html",
             onClick: "iframeWindow",
         },
+        {
+            buttonText: "Link (Startpage)",
+            content: "Das ist eine Datenschutzfreundliche Suchmachine",
+            link: "https://startpage.com",
+        },
+        ],
+    },
+    {
+        group: "BIT-TAG",
+        panels: [
         {
             buttonText: "BIT-TAG Webseite",
             content: "Das ist die Webseite es erstellers",
@@ -167,9 +177,73 @@
             onClick: "iframeWindow",
         },
         {
-            buttonText: "Startpage",
-            content: "Das ist eine Datenschutzfreundliche Suchmachine",
-            link: "https://startpage.com",
+            buttonText: "BIT-TAG YouTube Kanal",
+            content: "",
+            link: "https://www.youtube.com/@BIT-TAG",
+        },
+        {
+            buttonText: "SEARCH-TAG",
+            content: "Das ist eine art Wiki Seite",
+            link: "https://search-tag.org",
+            onClick: "iframeWindow",
+        },
+        {
+            buttonText: "DESIGN-TAG",
+            content: "Hier kannst du alles rund um das Themas Design sehen",
+            link: "https://design-tag.com",
+            onClick: "iframeWindow",
+        },
+        {
+            buttonText: "HOST-TAG",
+            content: "",
+            link: "https://host-tag.org",
+            onClick: "iframeWindow",
+        },
+        {
+            buttonText: "IT-TAG",
+            content: "",
+            link: "https://it-tag.org",
+            onClick: "iframeWindow",
+        },
+        {
+            buttonText: "SALES-TAG",
+            content: "",
+            link: "https://sales-tag.org",
+            onClick: "iframeWindow",
+        },
+        {
+            buttonText: "CYBER-TAG",
+            content: "",
+            link: "https://cyber-tag.org",
+            onClick: "iframeWindow",
+        },
+        {
+            buttonText: "OPEN-MOTO",
+            content: "Das ist die Webseite für alle selbstentwickelten OpenSurce Projekte",
+            link: "https://open-moto.org",
+            onClick: "iframeWindow",
+        },
+        ],
+    },
+    {
+        group: "Linux Guides",
+        panels: [
+        {
+            buttonText: "Linux Guides Webseite",
+            content: "",
+            link: "https://www.linuxguides.de/",
+            onClick: "iframeWindow",
+        },
+        {
+            buttonText: "LibreWorkspace Webseite",
+            content: "Das ist der Digitale Arbeitspaltz auf OpenSurce Software",
+            link: "https://www.libre-workspace.org/",
+            onClick: "iframeWindow",
+        },
+        {
+            buttonText: "Linuxguides Youtube",
+            content: "",
+            link: "https://www.youtube.com/@LinuxGuides",
         },
         ],
     },
