--- a/setting.html
+++ b/setting.html
@@ -204,6 +204,7 @@
                 v.0.7.6
                 <ul>
                     <li>Homepage</li>
+                    <li>Icon in Overview</li>
                     <li>leichte Verbesserungen im Design</li>
                     <li>config.json Datei</li>
                 </ul>
@@ -224,22 +225,44 @@
                     <li>Personalisierte Accounts</li>
                     <li>Django - Backend</li>
                     <li>Svelte - Fontend</li>
-                    <li>Mehrere Sprachen</li>
                 </ul>
             </div>
         </details>
+        <hr>
+        <details class="content-header">
+        <summary>2025 Q2</summary>
+        <div class="content-main">
+            v.0.8.1
+            <ul>
+                <li>Mehrere Sprachen</li>
+            </ul>
+            v.0.8.2
+            <ul>
+                <li>Plugins für Header</li>
+            </ul>
+        </div>
+    </details>
     </main>
     <footer>
-        Projekt: openMoto-webdesk <br>
-        Version: 0.7.5 <br>
-        Github: <a href="https://github.com/BIT-TAG/openMoto-webdesk">Reposetory</a><br>
-        Gitlab: coming soon <br>
-        Webpage: <a href="http://open-moto.org">Projekt Webseite</a> (openMoto)
+        <i data-feather="folder"></i>Projekt: openMoto-webdesk <br>
+        <i data-feather="git-branch"></i>Version: 0.7.5 <br>
+        <i data-feather="github"></i>Github: <a href="https://github.com/BIT-TAG/openMoto-webdesk">Reposetory</a><br>
+        <i data-feather="gitlab"></i>Gitlab: coming soon <br>
+        <i data-feather="monitor"></i>Webpage: <a href="http://open-moto.org">Projekt Webseite</a> (openMoto)
         <br><br>
-        Organisation: BIT-TAG EK <br>
-        Webpage: <a href="http://bit-tag.com">BIT-TAG Webseite</a> <br>
-        Autor: Dustin Ludwig <br>
+        <i data-feather="users"></i>Organisation: BIT-TAG EK <br>
+        <i data-feather="monitor"></i>Webpage: <a href="http://bit-tag.com">BIT-TAG Webseite</a> <br>
+        <i data-feather="user"></i>Autor: Dustin Ludwig <br>
     </footer>
 </div>
+<script src="https://unpkg.com/feather-icons"></script>
+<script>
+    /* =========================================================
+       Einbindung von Icons
+    ============================================================ */
+
+    feather.replace(); // Initialisiere die Icons
+
+</script>
 </body>
 </html>
