--- a/webdesk.html
+++ b/webdesk.html
@@ -17,7 +17,7 @@
         
             <ul class="menu">
                 <li class="dropdown-container">
-                    <div class="setting"><button title="Overview"><i data-feather="grid" aria-placeholder="apps"></button></i></div>
+                    <div class="setting"><button title="Overview"><i data-feather="grid" aria-placeholder="apps"></i></button></div>
                     <ul class="dropdown" id="homeDropdown">
                         <li><div class="overview"></div></li>
                     </ul>
@@ -30,10 +30,10 @@
                     </span>
                 </li>
                 <li>
-                    <button title="Homepage">Home</button>
+                    <button title="Homepage"><i data-feather="home" aria-placeholder="home"></i> Home</button>
                 </li>
                 <li>
-                    <button title="Desktop">Desktop</button>
+                    <button title="Desktop"><i data-feather="monitor" aria-placeholder="monitor"></i> Desktop</button>
                 </li>
             </ul>
         </div>
