--- a/setting.html
+++ b/setting.html
@@ -133,6 +133,10 @@
             margin: 0;
         }
 
+        svg {
+            height: 15px;
+        }
+
     </style>
 </head>
 <body>
@@ -140,7 +144,7 @@
     <header>
         Dies ist eine Alpha Version, die Editierbaren Einstellungen kommen mit der <code>v.0.8</code>
     </header>
-    <h3>Anleitung</h3>
+    <h3><i data-feather="book-open"></i> Anleitung</h3>
     <main>
         <details class="content-header">
             <summary>Bilder Ändern</summary>
@@ -196,7 +200,7 @@
             </div>
         </details>
     </main>
-    <h3>Roadmap</h3>
+    <h3><i data-feather="git-merge"></i> Roadmap</h3>
     <main>
         <details class="content-header">
             <summary>2024 Q4</summary>
